@@ -1,3 +1,8 @@
+2010-09-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-dir-status-parse-line): ignore backup
+	files
+
 2010-08-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-annotate-post-process): bugfix: don't
